<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0CC"
    tools:context=".controller.HomeFragment">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <ImageView
            android:id="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            app:layout_heightPercent="20%"
            app:layout_marginTopPercent="5%"
            app:layout_widthPercent="20%"
            app:srcCompat="@drawable/ic_app_logo" />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/tv_fragment_home_appName"
            android:textColor="@color/fontColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_marginTopPercent="25%" />

        <Button
            android:id="@+id/btn_home_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_btn"
            android:text="@string/btn_fragment_home_profile"
            android:textColor="#FFFFFF"
            app:layout_marginTopPercent="40%"
            app:layout_widthPercent="50%" />


        <Button
            android:id="@+id/btn_home_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_btn"
            android:textAllCaps="false"
            android:text="@string/btn_fragment_home_current_group"
            android:textColor="#FFFFFF"
            app:layout_marginTopPercent="50%"
            app:layout_widthPercent="50%" />

        <Button
            android:id="@+id/btn_home_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_btn"
            android:textAllCaps="false"
            android:text="@string/btn_fragment_home_create"
            android:textColor="#FFFFFF"
            app:layout_marginTopPercent="60%"
            app:layout_widthPercent="50%" />

        <Button
            android:id="@+id/btn_home_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_btn"
            android:textAllCaps="false"
            android:text="@string/btn_fragment_home_join"
            android:textColor="#FFFFFF"
            app:layout_marginTopPercent="70%"
            app:layout_widthPercent="50%" />

        <Button
            android:id="@+id/btn_home_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_btn"
            android:textAllCaps="false"
            android:text="@string/btn_fragment_home_about"
            android:textColor="#FFFFFF"
            app:layout_marginTopPercent="80%"
            app:layout_widthPercent="50%" />

        <TextView
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/tv_fragment_home_slogan"
            android:textColor="@color/fontColor"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_marginTopPercent="90%" />


    </android.support.percent.PercentRelativeLayout>


</LinearLayout>