<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_view_shadow"
    >

    <TextView
        android:layout_margin="4dp"
        android:textColor="#05395c"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_dialog_set_member_confirm_set_vice_set_host"
        android:textStyle="bold|italic" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >
        <Button
            android:id="@+id/btn_create_confirm_set_host"
            android:text="@string/btn_dialog_set_member_confirm_set_vice_confirm_set_host"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_home_shape"
            android:textStyle="normal"
            android:textColor="#05395c"

            />
        <Button
            android:id="@+id/btn_create_confirm_cancel_set_host"
            android:text="@string/btn_dialog_set_member_confirm_set_vice_cancel_set_host"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_home_shape"
            android:textStyle="normal"
            android:textColor="#05395c"

            />
    </LinearLayout>

</LinearLayout>